fixed text alignment for ul

--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -153,7 +153,11 @@ label {
   width: 100%;
   padding: 0 40px 0 30px;
 }  
-  
+
+ul.custom-list li {
+  text-align: left;
+}
+
 /* p.implications {
   margin-bottom: 8px;
 }
